--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Prehistoric Animals</title>
   <link href="css/main.css" rel="stylesheet">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <link href="http://fonts.googleapis.com/css?family=Denk+One" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Denk+One" rel="stylesheet">
 </head>
 <body>
 
